fix gap between sections

--- a/public/css/process.css
+++ b/public/css/process.css
@@ -3,7 +3,7 @@
   width: 862px;
   color: #ccc;
   height: 5px;
-  transform: translate(-50%, -4px);
+  transform: translate(-50%, 19px);
   left: 50%;
   position: relative;
 }
@@ -44,7 +44,7 @@
 #step {
   height: 100px;
   width: 100%;
-  transform: translate(0, -24px);
+  transform: translate(0, 2px);
 }
 #step span i {
   padding: 20px;
@@ -166,7 +166,7 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  bottom: 9%;
+  bottom: 8.7%;
   right: 41.7%;
 }
 
@@ -202,7 +202,7 @@
     margin-top: 150px;
   }
   .f-m-progress-spans {
-    bottom: 9%;
+    bottom: 8.9%;
   }
 }
 @media screen and (max-width: 639.98px) {
@@ -210,9 +210,9 @@
     min-height: 183px;
   }
   .m-progress-spans > * + * {
-    margin-top: 170px;
+    margin-top: 167px;
   }
   .f-m-progress-spans {
-    bottom: 8%;
+    bottom: 9.5%;
   }
 }
